iaac/blueprint/infra/modules/istio/base/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-infra
  namespace: infra
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: postgres
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-redis
  namespace: infra
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: redis
